package energy.eddie.dataneeds;

public enum EnergyType {
    ELECTRICITY,
    NATURAL_GAS,
    HYDROGEN,
    HEAT
}
