%% SPDX-FileCopyrightText: 2025 The EDDIE Developers <eddie.developers@fh-hagenberg.at>
%% SPDX-License-Identifier: Apache-2.0
classDiagram
    class DataNeed {
        <<abstract>>
        +boolean enabled
        +String type
        +String id
        +String name
        +String description
        +String purpose
        +URL policyLink
        +RegionConnectorFilter regionConnectorFilter
    }

    class AccountingPointDataNeed

    class TimeframedDataNeed {
        <<abstract>>
        +DataNeedDuration duration
    }

    class ValidatedHistoricalDataDataNeed {
        +Granularity minGranularity
        +Granularity maxGranularity
        +EnergyType energyType
    }

    class AiidaDataNeed {
        +String~CronExpression~ transmissionSchedule
        +Set~PermissionCommandAction~ allowedPermissionCommands
        +boolean acknowledgementRequired
        +Set~AiidaSchema~ schemas
        +AiidaAsset asset
        +Set~String~ dataTags
        +Set~AiidaContext~ contexts
    }
    note for AiidaDataNeed "<a href='https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/scheduling/support/CronExpression.html'>Uses Spring CronExpression Syntax</a>"

    class CESUJoinRequestDataNeed {
        +Granularity minGranularity
        +Granularity maxGranularity
        +Integer participationFactor
        +EnergyDirection energyDirection
    }
    class EnergyDirection {
        <<enumeration>>
        CONSUMPTION
        PRODUCTION
    }

    class EnergyType {
        <<enumeration>>
        ELECTRICITY
        NATURAL_GAS
        HYDROGEN
        HEAT
    }

    class AiidaSchema {
        <<enumeration>>
        SMART-METER-P1-RAW
        SMART-METER-P1-CIM-V1-04
        SMART-METER-P1-CIM-V1-12
        OPAQUE
        ACKNOWLEDGEMENT-CIM-V1-12
        MIN-MAX-ENVELOPE-CIM-V1-12
    }

    class AiidaAsset {
        <<enumeration>>
        CONNECTION-AGREEMENT-POINT
        CONTROLLABLE-UNIT
        DEDICATED-MEASUREMENT-DEVICE
        SUBMETER
    }

    class AiidaContext {
        <<enumeration>>
        FLEXIBLE-CONNECTION-AGREEMENT
    }

    class DataNeedDuration

    class RelativeDuration {
        +Duration~ISO8601~ start
        +Duration~ISO8601~ end
        +boolean stickToStartOfCalendarUnit
        +CalendarUnit stickyStartCalendarUnit
    }

    class AbsoluteDuration {
        +Date start
        +Date end
    }
    class RegionConnectorFilter {
        + Type type
        + List~String~ regionConnectorIds
        + String dataNeedId
    }
    class Type {
        <<enumeration>>
        BLOCKLIST
        ALLOWLIST
    }

    DataNeed <|-- AccountingPointDataNeed
    DataNeed <|-- TimeframedDataNeed
    TimeframedDataNeed *-- DataNeedDuration
    TimeframedDataNeed <|-- ValidatedHistoricalDataDataNeed
    ValidatedHistoricalDataDataNeed *-- EnergyType
    DataNeedDuration <|-- AbsoluteDuration
    DataNeedDuration <|-- RelativeDuration
    AiidaDataNeed *-- AiidaAsset
    AiidaDataNeed *-- AiidaSchema
    AiidaDataNeed *-- AiidaContext
    TimeframedDataNeed <|-- AiidaDataNeed
    DataNeed <|-- CESUJoinRequestDataNeed
    CESUJoinRequestDataNeed *-- EnergyDirection
    DataNeed *-- RegionConnectorFilter
    RegionConnectorFilter *-- Type
